--- a/.prettierrc
+++ b/.prettierrc
@@ -2,8 +2,8 @@
         "semi": true,
         "tabWidth": 2,
         "printWidth": 100,
-        "singleQuote": true,
+        "singleQuote": false,
         "trailingComma": "none",
-        "jsxBracketSameLine": true
+        "jsxBracketSameLine": false
     }
       
