--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "style-loader": "^3.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && postcss tailwind.source.css -o public/build/tailwind.css",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
@@ -45,6 +46,7 @@
   "devDependencies": {
     "@types/node-sass": "^4.11.3",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^24.0.0",
@@ -54,6 +56,9 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.31.11",
     "node-sass": "^7.0.3",
+    "postcss": "^8.4.20",
+    "postcss-cli": "^10.1.0",
+    "postcss-loader": "^3.0.0",
     "prettier": "^2.8.1",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4"
